# traffic_Controller

./: CMakeLists.txt  README.md  seqence.plantuml  sw_requirements.txt
include/: CMakeLists.txt
include/traffic/: TrafficController.h  TrafficJunction.h  TrafficLight.h  TrafficPole.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  TrafficController.cpp  TrafficJunction.cpp  TrafficLight.cpp  TrafficPole.cpp
test/: CMakeLists.txt  Gtest_main.cpp  testTrafficController.cpp  testTrafficJunction.cpp  testTrafficLight.cpp  testTrafficPole.cpp
